# beamdrop

./: .gitignore  CHANGELOG.md  LICENSE  README.md  VERSION
.github/: README.md
apps/: README.md
core/: README.md
core/beamdrop-core/: Cargo.toml  README.md
core/beamdrop-core/beamdrop-bindings/: Cargo.toml  README.md
core/beamdrop-core/beamdrop-bindings/src/: lib.rs
core/beamdrop-core/beamdrop-crypto/: Cargo.toml
core/beamdrop-core/beamdrop-crypto/examples/: generate_session_vectors.rs
core/beamdrop-core/beamdrop-crypto/src/: lib.rs  session.rs
core/beamdrop-core/beamdrop-discovery/: Cargo.toml
core/beamdrop-core/beamdrop-discovery/src/: lib.rs
core/beamdrop-core/beamdrop-protocol/: Cargo.toml
core/beamdrop-core/beamdrop-protocol/src/: lib.rs
core/beamdrop-core/beamdrop-protocol/tests/: schema_validation.rs
core/beamdrop-core/beamdrop-store/: Cargo.toml
core/beamdrop-core/beamdrop-store/src/: lib.rs
core/beamdrop-core/beamdrop-transfer/: Cargo.toml
core/beamdrop-core/beamdrop-transfer/src/: checkpoint.rs  lib.rs
design/: README.md
docs/: README.md  android-ux-plan.md  android-windows-local-mvp-checklist.md  app-store-submission-notes.md  e2e-qa-plan.md  final-release-checklist.md  final-release-readiness-report.md  github-release-plan.md  known-issues.md  known-limitations.md  manual-test-cases.md  mvp-scope.md  pairing-flow.md  platform-limitations.md  privacy-policy-notes.md  product-requirements.md  production-readiness-audit.md  protocol-spec.md  qa-signoff.md  release-blockers.md  release-checklist.md  security-model.md  (+5 more)
(+308 files in other folders)
