[workspace]
resolver = "2"
members = [
    "beamdrop-protocol",
    "beamdrop-crypto",
    "beamdrop-transfer",
    "beamdrop-discovery",
    "beamdrop-store",
    "beamdrop-bindings",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/beamdrop/beamdrop"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
getrandom = "0.2"
jsonschema = { version = "0.47", default-features = false }
