[package]
name = "beamdrop-bindings"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
beamdrop-protocol = { path = "../beamdrop-protocol" }
beamdrop-crypto = { path = "../beamdrop-crypto" }
beamdrop-transfer = { path = "../beamdrop-transfer" }
beamdrop-discovery = { path = "../beamdrop-discovery" }
beamdrop-store = { path = "../beamdrop-store" }
